--- a/Views/assets/css/dashboard.css
+++ b/Views/assets/css/dashboard.css
@@ -96,6 +96,25 @@ hr {
     margin: 2rem;
 }
 
+.error-container {    
+    margin: 2rem;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    padding: .75rem 1.25rem;    
+    border: 1px solid transparent;
+    border-radius: .25rem;    
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    font-size: 1.3rem;
+}
+
+.error-container i {
+    font-size: 2rem;
+    margin-right: 1.3rem;
+}
+
 .dashboard-container {
     width: 85%;
     margin-top: 5rem;
