--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -227,7 +227,8 @@ hr {
 .ft-container p {
     font-size: 1.2rem;
     color: #fff;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
+    display: block;
 }
 
 
@@ -454,6 +455,25 @@ hr {
     margin: 20px;
 }
 
+.error-container {    
+    margin: 2rem;
+    width: 65%;
+    display: flex;
+    align-items: center;
+    padding: .75rem 1.25rem;    
+    border: 1px solid transparent;
+    border-radius: .25rem;    
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    font-size: 1.3rem;
+}
+
+.error-container i {
+    font-size: 2rem;
+    margin-right: 1.3rem;
+}
+
 
 /* Datasheet page*/
 .specification2_Style {    
@@ -461,8 +481,7 @@ hr {
     float:right; 
 }
 
-.title1_Style {
-    /*display: inline-block;*/
+.title1_Style {    
     font-size: 2.5rem; 
     color:yellow;
 }
@@ -481,8 +500,7 @@ hr {
 }
 
 .tableTitle_Style {
-    font-size: 200%; 
-    
+    font-size: 200%;     
 }
 
 .schedule_Style {
@@ -572,4 +590,61 @@ hr {
 
 .datasheet-video h4 {
     font-size: 2rem;
+}
+
+
+/* Account page */
+.account-head {
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+}
+
+.account-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-bottom: 5rem;    
+}
+
+.img-account {    
+    position: relative;
+    top: -60%;    
+}
+
+.img-account img {
+    width: 250px;
+    border-radius: 10rem;
+    box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);    
+}
+
+.img-account > .btn-l {
+    margin-top: 1rem;
+    display: block;     
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 800;
+}
+
+.content-account {
+    text-align: left;
+}
+
+.content-account > .item-account {    
+    height: 7rem;
+}
+
+.content-account > .item-account > h2, p {
+    display: inline-block;
+    padding: 1rem;
+}
+
+.content-account > .item-account > h2 {
+    width: 10%;    
+}
+
+.content-account > .item-account > p {
+    position: relative;
+    left: 10%;
+    width: 60%;    
+    border-bottom: 1px solid yellow;    
 }
