--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -85,10 +85,16 @@ hr {
 }
 
 .nav-link {
-    font-weight: 500;
+    font-weight: 600;
     text-shadow: 2px 1px 7px rgba(0, 0, 25, 1);
     color: #fff;
+    transition: all .3s ease-in-out;
 }
+
+.nav-link:hover {
+    color: rgba(255, 255, 0, 1);
+}
+
 
 .sub-menu {
     width: 13rem;
@@ -307,6 +313,13 @@ hr {
     border: 1px solid rgba(255, 255, 0, .5);
     border-radius: 5px;
     cursor: pointer;
+}
+
+.test {
+    display: block;
+    height: 10rem !important;
+    margin: 10rem;
+    padding: 10rem;
 }
 
 [type="date"] {
@@ -589,8 +602,13 @@ hr {
     color: #fff;
 }
 
+.label_Style i {
+    font-size: 2rem;
+}
+
 .data_Style {
     margin-top: 1%;
+    margin-left: 1rem;
     font-size: 150%;
     color: #919191;
 }
@@ -634,7 +652,7 @@ hr {
 }
 
 .datasheet-video h4 {
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 
