--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -227,7 +227,8 @@ hr {
 .ft-container p {
     font-size: 1.2rem;
     color: #fff;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
+    display: block;
 }
 
 
@@ -454,6 +455,25 @@ hr {
     margin: 20px;
 }
 
+.error-container {    
+    margin: 2rem;
+    width: 65%;
+    display: flex;
+    align-items: center;
+    padding: .75rem 1.25rem;    
+    border: 1px solid transparent;
+    border-radius: .25rem;    
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    font-size: 1.3rem;
+}
+
+.error-container i {
+    font-size: 2rem;
+    margin-right: 1.3rem;
+}
+
 
 /* Datasheet page*/
 .specification2_Style {    
@@ -461,8 +481,7 @@ hr {
     float:right; 
 }
 
-.title1_Style {
-    /*display: inline-block;*/
+.title1_Style {    
     font-size: 2.5rem; 
     color:yellow;
 }
@@ -481,8 +500,7 @@ hr {
 }
 
 .tableTitle_Style {
-    font-size: 200%; 
-    
+    font-size: 200%;     
 }
 
 .schedule_Style {
@@ -573,3 +591,201 @@ hr {
 .datasheet-video h4 {
     font-size: 2rem;
 }
+
+
+/* Account page */
+.account-head {
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+}
+
+.account-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-bottom: 5rem;    
+}
+
+.img-account {    
+    position: relative;
+    top: -60%;    
+}
+
+.img-account img {
+    width: 250px;
+    border-radius: 10rem;
+    box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);    
+}
+
+.img-account > .btn-l {
+    margin-top: 1rem;
+    display: block;     
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 800;
+}
+
+.content-account {
+    text-align: left;
+}
+
+.content-account > .item-account {    
+    height: 7rem;
+}
+
+.content-account > .item-account > h2, p {
+    display: inline-block;
+    padding: 1rem;
+}
+
+.content-account > .item-account > h2 {
+    width: 10%;    
+}
+
+.content-account > .item-account > p {
+    position: relative;
+    left: 10%;
+    width: 60%;    
+    border-bottom: 1px solid yellow;    
+}
+
+
+
+/* CINEMA SEATS - TEST */
+.theatre {
+    display: flex;
+    position: relative;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .cinema-seats {
+    display: flex;
+  }
+  .cinema-seats .seat {
+    cursor: pointer;
+  }
+  .cinema-seats .seat:hover:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 7px;
+  }
+  .cinema-seats .seat.active:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.6);
+    border-radius: 7px;
+  }
+  
+  .left .cinema-row {
+    transform: skew(-15deg);
+    margin: 0 6px;
+  }
+  .left .seat {
+    width: 35px;
+    height: 50px;
+    border-radius: 7px;
+    background: linear-gradient(to top, #761818, #761818, #761818, #761818, #761818, #B54041, #F3686A);
+    margin-bottom: 10px;
+    transform: skew(20deg);
+    margin-top: -32px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+  .left .row-2 {
+    transform: skew(-13deg);
+  }
+  .left .row-2 .seat {
+    transform: skew(18deg);
+  }
+  .left .row-3 {
+    transform: skew(-12deg);
+  }
+  .left .row-3 .seat {
+    transform: skew(16deg);
+  }
+  .left .row-4 {
+    transform: skew(-11deg);
+  }
+  .left .row-4 .seat {
+    transform: skew(15deg);
+  }
+  .left .row-5 {
+    transform: skew(-10deg);
+  }
+  .left .row-5 .seat {
+    transform: skew(12deg);
+  }
+  .left .row-6 {
+    transform: skew(-9deg);
+  }
+  .left .row-6 .seat {
+    transform: skew(10deg);
+  }
+  .left .row-7 {
+    transform: skew(-7deg);
+  }
+  .left .row-7 .seat {
+    transform: skew(8deg);
+  }
+  
+  .right {
+    margin-left: 70px;
+  }
+  .right .cinema-row {
+    transform: skew(7deg);
+    margin: 0 6px;
+  }
+  .right .seat {
+    width: 35px;
+    height: 50px;
+    border-radius: 7px;
+    background: linear-gradient(to top, #761818, #761818, #761818, #761818, #761818, #B54041, #F3686A);
+    margin-bottom: 10px;
+    transform: skew(-8deg);
+    margin-top: -32px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+  .right .row-2 {
+    transform: skew(9deg);
+  }
+  .right .row-2 .seat {
+    transform: skew(-10deg);
+  }
+  .right .row-3 {
+    transform: skew(10deg);
+  }
+  .right .row-3 .seat {
+    transform: skew(-12deg);
+  }
+  .right .row-4 {
+    transform: skew(11deg);
+  }
+  .right .row-4 .seat {
+    transform: skew(-15deg);
+  }
+  .right .row-5 {
+    transform: skew(12deg);
+  }
+  .right .row-5 .seat {
+    transform: skew(-16deg);
+  }
+  .right .row-6 {
+    transform: skew(13deg);
+  }
+  .right .row-6 .seat {
+    transform: skew(-18deg);
+  }
+  .right .row-7 {
+    transform: skew(15deg);
+  }
+  .right .row-7 .seat {
+    transform: skew(-20deg);
+  }
