--- a/Views/assets/css/dashboard.css
+++ b/Views/assets/css/dashboard.css
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-    color: #038b9a;
+    color: #057b88;
 }
 
 ul {
@@ -79,7 +79,7 @@ hr {
     left: 15%;
     width: 85%;
     height: 6rem;
-    background-color: #2a323c;
+    background-color: #232931;
     border-bottom: 1px solid #038b9a;
     color: #fff;
     font-size: 1.5rem;
@@ -96,6 +96,7 @@ hr {
 .icon-items span {
     margin: 2rem;
 }
+
 
 /* Error */
 .error-container {    
@@ -116,6 +117,7 @@ hr {
     font-size: 2rem;
     margin-right: 1.3rem;
 }
+
 
 /* Dashboard */
 .dashboard-container {
@@ -191,7 +193,7 @@ hr {
 .content-container {
     background-color: #323c48;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-    width: 80%;
+    width: 100%;
     padding: 2rem;
     border-radius: 1rem;
     font-size: 1.8rem;
@@ -218,16 +220,36 @@ hr {
     color: #fff;
 }
 
-.content-container button {
+.content-container input {
+    height: 3rem;
+}
+
+.btn {
     background-color: #038b9a;
-    color: #fff;
-    display: block;    
+    color: #fff;    
     border: none;
     height: 3rem;
     width: 9rem;    
     border-radius: 2px;
     cursor: pointer;    
-    margin: 0 auto;    
+    margin: 0 auto;       
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-delete {
+    background-color: #f8d7da;
+    color: #2a323c;
+}
+
+.btn-modify {
+    background-color: #038b9a;
+}
+
+.content-container > table > tbody > td > a {
+    display: inline-block;
 }
 
 .content-container table {
@@ -245,4 +267,29 @@ hr {
 
 .content-container td, th {
     padding: 1.3rem;
+}
+
+
+/* Add movie */
+.suggestions-container {
+    margin: 2rem;    
+    padding: 2rem;
+    width: 80%;
+    background-color: #232931;    
+    border-radius: 5px;
+}
+
+.suggestions-container p {
+    font-size: 1.5rem;    
+}
+
+.movie-list {    
+    width: 95%;
+}
+
+.movie-item {
+    margin: 1rem;
+    height: 5rem;
+    border-radius: 5px;
+    background-color: red;
 }
