--- a/Views/assets/css/dashboard.css
+++ b/Views/assets/css/dashboard.css
@@ -82,7 +82,7 @@ hr {
     background-color: #232931;
     border-bottom: 1px solid #038b9a;
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     z-index: 100;
 }
 
@@ -99,7 +99,7 @@ hr {
 
 
 /* Error */
-.error-container {    
+.alert-container {    
     margin: 2rem;
     width: 40%;
     display: flex;
@@ -107,15 +107,24 @@ hr {
     padding: .75rem 1.25rem;    
     border: 1px solid transparent;
     border-radius: .25rem;    
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
     font-size: 1.3rem;
 }
 
-.error-container i {
+.alert-container i {
     font-size: 2rem;
     margin-right: 1.3rem;
+}
+
+.success-container {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
+.error-container {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
 }
 
 
@@ -173,12 +182,12 @@ hr {
 .movies-container {
     padding: 2rem;
     display: grid;
-    max-width: 70%;    
-    grid-template-columns: repeat(4, 1fr);    
+    max-width: 65%;    
+    grid-template-columns: repeat(4, 1fr);        
 }
 
 .movie {    
-    width: 200px;    
+    width: 150px;    
 }
 
 .movie img {
@@ -269,6 +278,19 @@ hr {
     padding: 1.3rem;
 }
 
+.actions-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.actions-container i {
+    margin: .2rem;
+}
+
+.actions-container a:hover {
+    color: #000;    
+}
 
 /* Add movie */
 .suggestions-container {
@@ -281,6 +303,7 @@ hr {
 
 .suggestions-container p {
     font-size: 1.5rem;    
+    margin-bottom: 2rem;
 }
 
 .movie-list {    
@@ -289,11 +312,29 @@ hr {
 
 .movie-item {
     margin: 1rem;
-    height: 5rem;
+    padding: 2rem;
     border-radius: 5px;
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
 }
 
 .movie-item img {
-    width: 50px;
+    width: 150px;        
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+}
+
+.movie-item h3 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.movie-item p {
+    color: rgba(255 ,255, 255, 0.75);
+}
+
+.movie-item a {
+    font-size: 1.3rem;
 }
