--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -87,14 +87,13 @@ hr {
 .nav-link {
     font-weight: 600;
     text-shadow: 2px 1px 7px rgba(0, 0, 25, 1);
-    color: #fff;
-    transition: all .3s ease-in-out;
+    color: #fff;    
+    transition: all 300ms linear;
 }
 
 .nav-link:hover {
     color: rgba(255, 255, 0, 1);
 }
-
 
 .sub-menu {
     width: 13rem;
@@ -107,8 +106,8 @@ hr {
     top: 10rem;
     opacity: 0;
     visibility: hidden;
-    transition: all 650ms ease;
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);    
+    transition: all 650ms ease;        
+    box-shadow: 3px 3px 15px 2px rgba(0,0,00.75);
 }
 
 .sub-menu::before {
@@ -190,6 +189,11 @@ hr {
     text-align: center;
 }
 
+.container-large {
+    max-width: 1300px;
+    margin: 0 auto;     
+}
+
 .section-title {
     font-size: 3rem;
     text-transform: uppercase;
@@ -219,7 +223,7 @@ hr {
     width: 200px;
     object-fit: cover;
     border-radius: 5px;
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);    
 }
 
 
@@ -337,7 +341,7 @@ hr {
     padding-bottom: .5rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    cursor: pointer;
+    cursor: pointer;    
 }
 
 .movie-container {    
@@ -357,7 +361,7 @@ hr {
 .movie-img img {
     width: 100%;
     border-radius: 5px;
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);    
 }
 
 .movie-info {    
@@ -492,8 +496,9 @@ hr {
     border: 1px solid yellow;
     cursor: pointer;
     text-transform: uppercase;
-    margin: 0 auto;    
-    transition: all 0.2s ease-in-out;    
+    margin: 0 auto;            
+    font-weight: 700;
+    transition: all 300ms linear;
 }
 
 .btn-l:hover {
@@ -570,8 +575,7 @@ hr {
 
 /* Datasheet page*/
 .title1_Style {    
-    font-size: 2.5rem; 
-    color:yellow;
+    font-size: 2rem;     
     font-weight: 700;
 }
 
@@ -579,15 +583,13 @@ hr {
     margin-top: 2%;
     color: #919191;
     font-size: 1.5rem;
-    margin-bottom: 2%;
-    
+    margin-bottom: 2%;    
 }
 
 .specification_Style {
     margin-left: 10%;
     display: inline-block;
-    width:652px;
-    height:452px;
+    width:700px;    
 }
 
 .label_Style {
@@ -613,13 +615,13 @@ hr {
 }
 
 .poster_Style img {
-    border-radius: 5px;
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 5px;    
+    box-shadow: 3px 3px 7px 2px rgba(0,0,00.75);
 }
 
 .dataSheet_Style {
     margin-top: 8%;
-    margin-left: 10%;
+    margin-left: 13%;
     margin-right: 8%;
     margin-bottom: 10rem;
     padding:3px;
@@ -648,21 +650,135 @@ hr {
     font-size: 2.5rem;
 }
 
+.synopsis-container {
+    margin-bottom: 2rem;
+}
+
+.synopsis-extra {
+    width: 90%;
+    padding: 1rem;
+    font-size: 1.5rem;
+    display: grid;    
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: space-between;
+    row-gap: 2.5rem;    
+}
+
+.show-container {
+    border-top: 1px solid rgba(255, 255, 0, .2);    
+}
+
+.show-container > h2 {
+    margin: 4rem 0 4rem 0;
+    font-size: 2rem;
+}
+
+.show-item {
+    background-color: rgba(0, 0, 0, 0.2);    
+    border-radius: 10px;
+    margin-bottom: 5rem;        
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;    
+    justify-content: center;
+}
+
+.show-content {
+    border-right: 4px solid #222831;
+    height: 13rem;    
+    padding: 3rem 0 0 2rem;    
+}
+
+.show-content h2 {
+    font-size: 1.7rem;
+}
+
+.show-content p {
+    color: #919191;
+}
+
+.show-ticket > a {    
+    margin: 5rem;    
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 13px 20px;
+    font-size: 1.3rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: background-color 300ms linear;
+}
+
+.show-ticket > a:hover {
+    color: #171b21;
+    background-color: #fff;
+}
+
 
 /* Purchase ticket */
 .purchase-container {
-    height: 100vh;
+    height: 600px;
+    width: 85%;    
     display: grid;
-    grid-template-columns: 1.2fr 1fr;    
+    grid-template-columns: 1fr 1fr;    
+    justify-content: center;
+    text-align: start;
+    margin: 0 auto;
 }
 
 .purchase-form {
-    margin: 0 auto;
+    margin: 0 auto;    
+}
+
+.purchase-form .register-form {
+    padding: 1rem;    
+}
+
+.purchase-form h4 {
+    font-size: 1.63rem ;
+}
+
+.card-container > input {    
+    width: 5rem;
+    margin: 2rem 0 0 0;
 }
 
 .purchase-seats {
     margin: 0 auto;
 }
+
+.show-info {    
+    font-size: 1.4rem;
+    margin-bottom: 8rem;
+}
+
+.cinema-name {    
+    padding: 1rem;    
+}
+
+.show-complete-info {
+    padding-left: 3rem;        
+}
+
+.show-complete-info h3 {
+    font-weight: 200;
+    margin-bottom: 1.5rem;
+    padding: 1rem;
+    border-left: 1px solid rgba(255, 255, 0, .2);
+}
+
+.show-total {    
+    width: 60%;    
+    margin: 3rem;
+    text-align: center;
+    border: 2px solid  rgba(255, 255, 0, .1);    
+    padding: 2rem;
+}
+
+.show-total h3 {
+    font-size: 2.5rem;
+}
+
 
 
 /* CINEMA SEATS - TEST */
