--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -837,6 +837,16 @@ hr {
     font-size: 2.5rem;
 }
 
+.ticket-information {    
+    text-align: left;
+    margin: 2rem;
+    font-size: 1.5rem;    
+}
+
+.ticket-information h4 {
+    font-weight: 200;
+}
+
 
 
 /* CINEMA SEATS - TEST */
