--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -646,6 +646,10 @@ hr {
     font-size: 1.3rem;
 }
 
+.back-container a:hover {
+    color: #d4d4d4;
+}
+
 .title1_Style {    
     font-size: 2rem;     
     font-weight: 700;
@@ -1096,6 +1100,15 @@ hr {
     text-align: left;
 }
 
+.content-account span {
+    color: #919191;
+}
+
+.content-account > h3 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
 .content-account > .item-account {    
     height: 7rem;
 }
@@ -1114,6 +1127,31 @@ hr {
     left: 10%;
     width: 60%;    
     border-bottom: 1px solid rgba(255, 255, 0, .5);    
+}
+
+.btn-account {    
+    width: 40%;
+    margin: 0 auto;    
+}
+
+.btn-account > a {
+    display: inline-block;
+    height: 3rem;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.upload-container {    
+    width: 70%;
+    padding: .5rem 1.6rem;
+    color: #fff;       
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 5px 0px, rgba(0, 0, 0, 0.12) 0px 2px 10px 0px;
+    margin: 1rem auto;    
+}
+
+.form-upload .btn-l {
+    font-size: 1rem;
 }
 
 /* MIS COMPRAS */
